Add service and tag total costs
